tests/fail/SignedShiftLeft.java
package fail;

public class SignedShiftLeft {
    public static void main(String[] args) {
        System.out.println('a' << 42);
    }
}
